# MyFitnessTracker

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  FitnessApplication.h  FitnessApplication.slnx  FitnessApplication.vcxproj  FitnessApplication.vcxproj.filters  README.md
FitnessDesigner/: CMakeLists.txt  FitnessDesigner.qmlproject  FitnessDesigner.qmlproject.qtds  FitnessDesigner.qrc
FitnessDesigner/FitnessDesigner/: Constants.qml  qmldir
FitnessDesigner/FitnessDesigner/designer/: plugin.metainfo
FitnessDesigner/FitnessDesignerContent/: App.qml  HomePage.ui.qml  Main.qml  MyFitnessTracker_Blueprint.qmlproject  NutritionPage.ui.qml  Screen01.ui.qml  SideMenuBar.qml  WorkoutPage.ui.qml  qmldir
FitnessDesigner/FitnessDesignerContent/Components/: HandCursor.qml  ModernDonutBar.qml  NutrientStatCircle.qml  PageHeaderText.qml
FitnessDesigner/FitnessDesignerContent/MyFitnessComponents/: Exit.ui.qml  FullSize.ui.qml  HomePage.qml  HomePage.ui.qml  Menu.ui.qml  Minimize.ui.qml  Minimize_1.ui.qml  Minimizer_Minimized.ui.qml  Nutrition.ui.qml  Nutrition_Minimized.ui.qml  Workout.ui.qml  Workout_Minimized.ui.qml
include/: Analytics.h  AnalyticsEngine.h  AnalyticsTab.h  DataManager.h  FitnessApplication.h  GUI.h  Handlers.h  HealthMetric.h  HealthMetricsTab.h  Log.h  LogManager.h  Mainwindow.h  Nutrition.h  NutritionTab.h  SplashScreen.h  Workout.h  Workoutstab.h
include/Workouts/: CardioWorkout.h  StrengthWorkout.h  Workout.h  YogaWorkout.h
src/: Analytics.cpp  AnalyticsTab.cpp  DataManager.cpp  FitnessApplication.cpp  GUI.cpp  Handlers.cpp  HealthMetric.cpp  HealthMetricsTab.cpp  Log.cpp  LogManager.cpp  Mainwindow.cpp  Nutrition.cpp  NutritionTab.cpp  SplashScreen.cpp  Workout.cpp  Workoutstab.cpp  main.cpp
src/Workouts/: CardioWorkout.cpp  StrengthWorkout.cpp  Workout.cpp  YogaWorkout.cpp
src/components/WorkoutCard/: WorkoutCard.cpp  WorkoutCard.h
src/components/WorkoutDialog/: WorkoutDialog.cpp  WorkoutDialog.h
ui/: FitnessApplication.qrc  FitnessApplication.ui  FitnessApplication.ui.autosave  GUI.ui  WorkoutDialog.ui
